[gd_scene load_steps=5 format=3 uid="uid://d3iri7ubuiwjv"]

[ext_resource type="Script" path="res://addons/mapmagic_godot/dock/scripts/nodes/grass_node.gd" id="1_gl2jv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jxxm"]
bg_color = Color(0.168627, 0.211765, 0.266667, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.270588, 0.435294, 0.580392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvt8t"]
bg_color = Color(0.168627, 0.211765, 0.266667, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.270588, 0.435294, 0.580392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_if3bw"]
bg_color = Color(0.168627, 0.211765, 0.266667, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.270588, 0.435294, 0.580392, 1)

[node name="GrassNode" type="Panel"]
custom_minimum_size = Vector2(250, 0)
offset_left = 33.0
offset_top = 33.0
offset_right = 294.0
offset_bottom = 428.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_4jxxm")
script = ExtResource("1_gl2jv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
size_flags_vertical = 1
text = "Grass"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Properties" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Texture" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Properties"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Properties/Texture"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Texture"
vertical_alignment = 1

[node name="TextureProperties" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Properties/Texture"]
layout_mode = 2

[node name="Preview" type="TextureButton" parent="MarginContainer/VBoxContainer/Properties/Texture/TextureProperties"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 3
ignore_texture_size = true
stretch_mode = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Properties/Texture/TextureProperties/Preview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Click to add a texture"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Path" type="LineEdit" parent="MarginContainer/VBoxContainer/Properties/Texture/TextureProperties" groups=["values"]]
layout_mode = 2
size_flags_horizontal = 3
editable = false

[node name="GrassHeight" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Properties"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Properties/GrassHeight"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Grass Height"
vertical_alignment = 1

[node name="Value" type="SpinBox" parent="MarginContainer/VBoxContainer/Properties/GrassHeight" groups=["values"]]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
value = 1.0
allow_greater = true

[node name="CellSize" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Properties"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Properties/CellSize"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Cell Size"
vertical_alignment = 1

[node name="Value" type="SpinBox" parent="MarginContainer/VBoxContainer/Properties/CellSize" groups=["values"]]
layout_mode = 2
size_flags_horizontal = 3
value = 50.0
rounded = true
allow_greater = true

[node name="DensityMin" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Properties"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Properties/DensityMin"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Density min"
vertical_alignment = 1

[node name="Value" type="SpinBox" parent="MarginContainer/VBoxContainer/Properties/DensityMin" groups=["values"]]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
value = 0.01
allow_greater = true

[node name="DensityMax" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Properties"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Properties/DensityMax"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Density max"
vertical_alignment = 1

[node name="Value" type="SpinBox" parent="MarginContainer/VBoxContainer/Properties/DensityMax" groups=["values"]]
layout_mode = 2
size_flags_horizontal = 3
step = 0.01
value = 0.1
allow_greater = true

[node name="MaxDistance" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Properties"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Properties/MaxDistance"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Max distance"
vertical_alignment = 1

[node name="Value" type="SpinBox" parent="MarginContainer/VBoxContainer/Properties/MaxDistance" groups=["values"]]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
rounded = true
allow_greater = true

[node name="DeleteNode" type="Button" parent="."]
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -38.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 38.0
grow_horizontal = 0
text = "X"

[node name="NodeBefore" type="Panel" parent="."]
layout_mode = 0
offset_left = -27.0
offset_top = 201.0
offset_right = 3.0
offset_bottom = 233.0
theme_override_styles/panel = SubResource("StyleBoxFlat_uvt8t")

[node name="Button" type="TextureButton" parent="NodeBefore"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NodeAfter" type="Panel" parent="."]
layout_mode = 0
offset_left = 258.0
offset_top = 201.0
offset_right = 288.0
offset_bottom = 233.0
theme_override_styles/panel = SubResource("StyleBoxFlat_if3bw")

[node name="Button" type="TextureButton" parent="NodeAfter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Line" type="Line2D" parent="NodeAfter/Button"]

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(300, 300)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
root_subfolder = "res://"
